migrate parameter constants to configuration properties and simplify controller return types